src/openim_sdk_ffi.h

typedef struct {
    void (*onMethodChannel)(Dart_Port_DL port, const char*, const char*, const char*, double, const char*);
} CGO_OpenIM_Listener;
static void callOnMethodChannel(CGO_OpenIM_Listener *listener, Dart_Port_DL port, const char* methodName, const char* operationID,const char* callMethodName, double errCode, const char* message) {
    listener->onMethodChannel(port, methodName, operationID, callMethodName, errCode, message);
}
extern void RegisterCallback(CGO_OpenIM_Listener* callback, Dart_Port_DL port);
extern char* GetSdkVersion();
extern _Bool InitSDK(char* operationID, char* config);
extern void Login(char* operationID, char* userID, char* token);
extern void WakeUp(char* operationID);
extern void NetworkChanged(char* operationID);
extern void UploadImage(char* operationID, char* filePath, char* token, char* obj);
extern void UploadFile(char* operationID, char* filePath);
extern void Logout(char* operationID);
extern void SetAppBackgroundStatus(char* operationID, _Bool isBackground);
extern int32_t GetLoginStatus();
extern char* GetLoginUser();
extern void GetUsersInfo(char* operationID, char* userIDList);
extern void SetSelfInfo(char* operationID, char* userInfo);
extern void GetSelfUserInfo(char* operationID);
extern void CreateGroup(char* operationID, char* groupBaseInfo, char* memberList);
extern void JoinGroup(char* operationID, char* groupID, char* reqMsg, int32_t joinSource);
extern void QuitGroup(char* operationID, char* groupID);
extern void DismissGroup(char* operationID, char* groupID);
extern void ChangeGroupMute(char* operationID, char* groupID, _Bool isMute);
extern void ChangeGroupMemberMute(char* operationID, char* groupID, char* userID, int mutedSeconds);
extern void SetGroupMemberRoleLevel(char* operationID, char* groupID, char* userID, int roleLevel);