lib/openim_sdk_ffi_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_openim_sdk_ffi.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class OpenimSdkFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  OpenimSdkFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  OpenimSdkFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void callOnMethodChannel(
    ffi.Pointer<CGO_OpenIM_Listener> listener,
    int port,
    ffi.Pointer<ffi.Char> methodName,
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> callMethodName,
    int errCode,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _callOnMethodChannel(
      listener,
      port,
      methodName,
      operationID,
      callMethodName,
      errCode,
      message,
    );
  }

  late final _callOnMethodChannelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<CGO_OpenIM_Listener>,
              Dart_Port_DL,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Pointer<ffi.Char>)>>('callOnMethodChannel');
  late final _callOnMethodChannel = _callOnMethodChannelPtr.asFunction<
      void Function(
          ffi.Pointer<CGO_OpenIM_Listener>,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>)>();

  void RegisterCallback(
    ffi.Pointer<CGO_OpenIM_Listener> callback,
    int port,
  ) {
    return _RegisterCallback(
      callback,
      port,
    );
  }

  late final _RegisterCallbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<CGO_OpenIM_Listener>,
              Dart_Port_DL)>>('RegisterCallback');
  late final _RegisterCallback = _RegisterCallbackPtr.asFunction<
      void Function(ffi.Pointer<CGO_OpenIM_Listener>, int)>();

  ffi.Pointer<ffi.Char> GetSdkVersion() {
    return _GetSdkVersion();
  }

  late final _GetSdkVersionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'GetSdkVersion');
  late final _GetSdkVersion =
      _GetSdkVersionPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  bool InitSDK(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> config,
  ) {
    return _InitSDK(
      operationID,
      config,
    );
  }

  late final _InitSDKPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('InitSDK');
  late final _InitSDK = _InitSDKPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void Login(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userID,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _Login(
      operationID,
      userID,
      token,
    );
  }

  late final _LoginPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('Login');
  late final _Login = _LoginPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void WakeUp(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _WakeUp(
      operationID,
    );
  }

  late final _WakeUpPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'WakeUp');
  late final _WakeUp =
      _WakeUpPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void NetworkChanged(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _NetworkChanged(
      operationID,
    );
  }

  late final _NetworkChangedPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'NetworkChanged');
  late final _NetworkChanged =
      _NetworkChangedPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void UploadImage(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> filePath,
    ffi.Pointer<ffi.Char> token,
    ffi.Pointer<ffi.Char> obj,
  ) {
    return _UploadImage(
      operationID,
      filePath,
      token,
      obj,
    );
  }

  late final _UploadImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('UploadImage');
  late final _UploadImage = _UploadImagePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void UploadFile(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> filePath,
  ) {
    return _UploadFile(
      operationID,
      filePath,
    );
  }

  late final _UploadFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('UploadFile');
  late final _UploadFile = _UploadFilePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void Logout(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _Logout(
      operationID,
    );
  }

  late final _LogoutPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'Logout');
  late final _Logout =
      _LogoutPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void SetAppBackgroundStatus(
    ffi.Pointer<ffi.Char> operationID,
    bool isBackground,
  ) {
    return _SetAppBackgroundStatus(
      operationID,
      isBackground,
    );
  }

  late final _SetAppBackgroundStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Bool)>>('SetAppBackgroundStatus');
  late final _SetAppBackgroundStatus = _SetAppBackgroundStatusPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, bool)>();

  int GetLoginStatus() {
    return _GetLoginStatus();
  }

  late final _GetLoginStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('GetLoginStatus');
  late final _GetLoginStatus = _GetLoginStatusPtr.asFunction<int Function()>();

  ffi.Pointer<ffi.Char> GetLoginUser() {
    return _GetLoginUser();
  }

  late final _GetLoginUserPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'GetLoginUser');
  late final _GetLoginUser =
      _GetLoginUserPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  void GetUsersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetUsersInfo(
      operationID,
      userIDList,
    );
  }

  late final _GetUsersInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('GetUsersInfo');
  late final _GetUsersInfo = _GetUsersInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void SetSelfInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> userInfo,
  ) {
    return _SetSelfInfo(
      operationID,
      userInfo,
    );
  }

  late final _SetSelfInfoPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('SetSelfInfo');
  late final _SetSelfInfo = _SetSelfInfoPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void GetSelfUserInfo(
    ffi.Pointer<ffi.Char> operationID,
  ) {
    return _GetSelfUserInfo(
      operationID,
    );
  }

  late final _GetSelfUserInfoPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'GetSelfUserInfo');
  late final _GetSelfUserInfo =
      _GetSelfUserInfoPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void CreateGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupBaseInfo,
    ffi.Pointer<ffi.Char> memberList,
  ) {
    return _CreateGroup(
      operationID,
      groupBaseInfo,
      memberList,
    );
  }

  late final _CreateGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('CreateGroup');
  late final _CreateGroup = _CreateGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  void JoinGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reqMsg,
    int joinSource,
  ) {
    return _JoinGroup(
      operationID,
      groupID,
      reqMsg,
      joinSource,
    );
  }

  late final _JoinGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('JoinGroup');
  late final _JoinGroup = _JoinGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void QuitGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _QuitGroup(
      operationID,
      groupID,
    );
  }

  late final _QuitGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('QuitGroup');
  late final _QuitGroup = _QuitGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void DismissGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _DismissGroup(
      operationID,
      groupID,
    );
  }

  late final _DismissGroupPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('DismissGroup');
  late final _DismissGroup = _DismissGroupPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void ChangeGroupMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    bool isMute,
  ) {
    return _ChangeGroupMute(
      operationID,
      groupID,
      isMute,
    );
  }

  late final _ChangeGroupMutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('ChangeGroupMute');
  late final _ChangeGroupMute = _ChangeGroupMutePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void ChangeGroupMemberMute(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    int mutedSeconds,
  ) {
    return _ChangeGroupMemberMute(
      operationID,
      groupID,
      userID,
      mutedSeconds,
    );
  }

  late final _ChangeGroupMemberMutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Int)>>('ChangeGroupMemberMute');
  late final _ChangeGroupMemberMute = _ChangeGroupMemberMutePtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, int)>();

  void SetGroupMemberRoleLevel(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userID,
    int roleLevel,
  ) {
    return _SetGroupMemberRoleLevel(
      operationID,
      groupID,
      userID,
      roleLevel,
    );
  }
